[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pqcrypto-demo"
version = "0.1.0"
description = "A demonstration of Quantum-Resistant (Post-Quantum) Cryptography using NIST-standardized algorithms"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "liboqs-python",
    "pycryptodome",
    "matplotlib",
    "pandas",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
